# RAG-pipeline

./: create_database.py  main.py  pyproject.toml
chroma_db/6072841c-c515-4373-b320-7a29d7ad7356/: index_metadata.pickle
data/text_files/: notes.txt
notebook/: test.ipynb
retrievers/: arixv.py  mmr.py
vector_store/: DB.py
