[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.7",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-mistralai>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "sentence-transformers>=5.4.0",
    "tiktoken>=0.12.0",
]
